force-app/main/default/objects/Account_Field_Score__c/Account_Field_Score__c.object-meta.xml
<CustomObject>
    <description>Juntion object between Account and Fields Scores. When an account field value is set or change an Account Field Score record will be created.</description>
    <label>Account Field Score</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Field Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Field Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>