force-app/main/default/objects/Account_Field_Score__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The related Account for the Account Field Score, master of this record</description>
    <inlineHelpText>Please pick the account for this Account Field Score record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Field Scores</relationshipLabel>
    <relationshipName>Account_Field_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>