force-app/main/default/objects/Account_Field_Score__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <formula>Field_Score__r.FieldName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field</label>
    <type>Text</type>
</CustomField>