force-app/main/default/objects/Account_Field_Score__c/fields/Field_Score__c.field-meta.xml
<CustomField>
    <fullName>Field_Score__c</fullName>
    <description>The Field Score and Account are both master of the Account Field Score juntion object</description>
    <inlineHelpText>Please select the Score for the corresponding field value</inlineHelpText>
    <label>Field Score</label>
    <referenceTo>Field_Score__c</referenceTo>
    <relationshipLabel>Account Field Scores</relationshipLabel>
    <relationshipName>Account_Field_Scores</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>