force-app/main/default/objects/Account_Field_Score__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <description>The field value from the Account, set by the automation that creates/updates the Account Field Score record</description>
    <inlineHelpText>Please set this field to the value of the field on the Account</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>