force-app/main/default/objects/Account_Field_Score__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>This set the weight for the Account Field Score, determine by the primary asset class on the account level. Only credit and Public equity are applicable for now</description>
    <formula>CASE( TEXT(Account__r.Primary_Asset_Class__c), 
&quot;Credit&quot;,  Field_Score__r.Field_Weight__r.Credit_Weight__c , 
&quot;Equity&quot;, Field_Score__r.Field_Weight__r.Public_Equity_Weight__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>