force-app/main/default/objects/Account_Field_Score__c/fields/Weight_Score_Static__c.field-meta.xml
<CustomField>
    <fullName>Weight_Score_Static__c</fullName>
    <description>The Static version of the Weighted Score, used in the roll-up on the Account level</description>
    <label>Weight Score Static</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>