force-app/main/default/objects/Account_Field_Score__c/fields/Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score__c</fullName>
    <formula>Score__c * Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>