force-app/main/default/objects/Account_Field_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Field__c</columns>
    <columns>Field_Score__c</columns>
    <columns>Field_Value__c</columns>
    <columns>Score__c</columns>
    <columns>Weight__c</columns>
    <columns>Weight_Score_Static__c</columns>
    <columns>Weighted_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>